--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ button {
     width: 100%;
     height: auto;
     min-height: 650px;
-    background-image: url('../images/bg-image.JPG');
+    background-image: url('../images/bg.jpeg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
